--- a/index.html
+++ b/index.html
@@ -75,7 +75,15 @@
         </section>
     </header>
 
-    <main class="unidadesmain">
+    <form id="select-form"> <!-- Selector de Categorías -->
+        <select id="select-category">
+            <option value="Todas" selected>Todas</option>
+            <option value="Familiar">Familiar</option>
+            <option value="Parejas">Parejas</option>
+        </select>
+    </form>
+
+    <main class="unidadesmain"> <!-- Tarjetas de unidades disponibles -->
         <div id="unidades-container">
 
         </div>
