--- a/menu-navegacion/servicios/servicios.html
+++ b/menu-navegacion/servicios/servicios.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Complejo Los Palmares</title> <!-- Título de la página -->
-    <meta name="description" content="Departamentos totalmente equipados, con aire frío-calor, Wi-Fi y todo lo necesario para sentirte como en la calidez de tu hogar."> <!-- Descripción de la Página Visible en Buscadores -->
-    <meta name="keywords" content="alojamiento, vacaciones, familia, turismo, cabañas, departamento, carlos paz, sierras, lago, vistas, mascotas, naturaleza"> <!-- Palabras Clave de Búsqueda -->
+    <title>Servicios - Complejo Los Palmares</title> <!-- Título de la página -->
+    <meta name="description" content="Complejo Los Palmares: Departamentos totalmente equipados, con aire frío-calor, Wi-Fi y todo lo necesario para sentirte como en la calidez de tu hogar. Además contamos con servicios de salas de juegos para niños, sala de trabajo, juegos de niños al aire libre y un apacible rincón de lectura."> <!-- Descripción de la Página Visible en Buscadores -->
+    <meta name="keywords" content="juegos para niños, juguetes, lectura, trabajo, viajes por trabajo, reservar, contacto, teléfono, correo, ofertas, oferta, descuentos, descuento, off, cupones, alojamiento, vacaciones, familia, turismo, cabañas, departamento, carlos paz, sierras, lago, vistas, mascotas, naturaleza"> <!-- Palabras Clave de Búsqueda -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous"> <!-- Link de Bootstrap -->
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"> <!-- Link de Toastify -->
-    <link rel="shortcut icon" href="media/favicon.png" type="image/x-icon"> <!-- Favicon de la página -->
-    <link rel="stylesheet" href="styles.css"> <!-- Link CSS de Estilos -->
+    <link rel="shortcut icon" href="../../media/favicon.png" type="image/x-icon"> <!-- Favicon de la página -->
+    <link rel="stylesheet" href="../../styles.css"> <!-- Link CSS de Estilos -->
     <link rel="preconnect" href="https://fonts.googleapis.com"> <!-- Link Google para fuentes -->
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <!-- Link Google para Fuentes -->
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap" rel="stylesheet"> <!-- Link Google para Fuentes -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <!-- Link Google para fuentes -->
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap" rel="stylesheet"> <!-- Link Google para fuentes -->
 </head>
 
 <body>
@@ -22,7 +22,7 @@
         <section>
             <!-- Imagen Logotipo de la empresa -->
             <div class="div--img-smallheader">
-                <img class="img-smallheader" src="media/logo.png" alt="Complejo Los Palmares Logo" width="300px" height="120px">
+                <img class="img-smallheader" src="../../media/logo.png" alt="Complejo Los Palmares Logo" width="300px" height="120px">
             </div>
 
             <!-- Menú de navegación -->
@@ -38,17 +38,17 @@
                     <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                     </div>
                     <div class="offcanvas-body">
+                        <ul class="section__li--inicio">
+                            <li><a href="../../index.html">Inicio</a></li>
+                        </ul>
                         <ul class="section__li--ofertas">
-                            <li><a href="menu-navegacion/ofertas/ofertas.html">Ofertas</a></li>
+                            <li><a href="../ofertas/ofertas.html">Ofertas</a></li>
                         </ul>
                         <ul class="section__li--unidades">
-                            <li><a href="menu-navegacion/unidades/unidades.html">Unidades</a></li>
-                        </ul>
-                        <ul class="section__li--servicios">
-                            <li><a href="menu-navegacion/servicios/servicios.html">Servicios</a></li>
+                            <li><a href="../unidades/unidades.html">Unidades</a></li>
                         </ul>
                         <ul class="section__li--reservar">
-                            <li><a href="menu-navegacion/reservar/reservar.html">Reservar</a></li>
+                            <li><a href="../reservar/reservar.html">Reservar</a></li>
                         </ul>
                     </div>
                 </div>
@@ -57,23 +57,22 @@
 
             <div class="header__navigation--portatil"> <!-- Menú de Navegación para grandes pantallas -->
                 <ul class="section__li--inicio">
-                    <li><span>Inicio</span></li>
+                    <li><a href="../../index.html">Inicio</a></li>
                 </ul>
                 <ul class="section__li--ofertas">
-                    <li><a href="menu-navegacion/ofertas/ofertas.html">Ofertas</a></li>
-                </ul>
-                <ul class="section__li--unidades">
-                    <li><a href="menu-navegacion/unidades/unidades.html">Unidades</a></li>
+                    <li><a href="../ofertas/ofertas.html">Ofertas</a></li>
                 </ul>
                 <ul class="section__li--servicios">
-                    <li><a href="menu-navegacion/servicios/servicios.html">Servicios</a></li>
+                    <li><span>Servicios</span></li>
+                </ul>
+                <ul class="section__li--unidades">
+                    <li><a href="../unidades/unidades.html">Unidades</a></li>
                 </ul>
                 <ul class="section__li--reservar">
-                    <li><a href="menu-navegacion/reservar/reservar.html">Reservar</a></li>
+                    <li><a href="../reservar/reservar.html">Reservar</a></li>
                 </ul>
                 <!-- Imagen Logotipo de la empresa -->
-                <img class="img-header" src="media/logo.png" alt="Complejo Los Palmares Logo" width="300px" height="120px">
-
+                <img class="img-header" src="../../media/logo.png" alt="Complejo Los Palmares Logo" width="300px" height="120px">
             </div>
 
         </section>
@@ -101,52 +100,51 @@
         </form>
     </header>
 
-    <main class="indexmain">
-        <div id="carouselExampleIndicators" class="carousel slide">
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-            </div>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="media/paisaje1.jpg" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="media/paisaje2.jpg" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="media/paisaje3.jpg" class="d-block w-100 paisaje3" alt="...">
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-        </div>
-        <section class="indexmain__section--information">                    
-            <div class="indexmain__div--information"> 
-                <!-- Información fija sobre las imágenes cambiantes -->
-                <h1 class="fs-1">Complejo Los Palmares</h1>
-                <p class="fs-3">Teléfono</p>
-                <a class="fs-5" href="tel:+54 9 3541 23-2396">+54 9 3541 23-2396</a>
-            </div>
-        </section>
-
-        <section class="indexmain__section--description">
-            <!-- Información / Descripción de la empresa -->
-            <article> 
-                <h2>Conozca Complejo Los Palmares</h2>
-                <p>Con una ubicación privilegiada, inmerso en la naturaleza serrana cordobesa y rodeado a su vez de puntos turísticos importantes, el Complejo Los Palmares cuenta con 11 viviendas de distintos tamaños, variando entre una, dos y tres habitaciones, todas ellas con vistas al lago, a las sierras y a la hermosa Ciudad de Villa Carlos Paz.</p>
-                <p>Equipadas totalmente con sommier, Smart TV, aire frío-calor, refrigerador con freezer, sofá-cama, Wi-Fi, vajilla y todo lo necesario para sentirte como en la calidez de tu hogar</p>
-                <p>En el exterior podrás disfrutar de una piscina y un solárium, ambos con vista directa al lago, como así también de un amplio parque serrano, pudiendo visualizar especies de vida silvestre de flora y fauna.</p>
-            </article>
+    <main>
+        <section id="servicios-container">
+            
         </section>
     </main>
+
+    <!-- <main class="serviciosmain">
+        <section>
+                <ul>
+                    <li class="sala-juegos-infantiles">
+                        <div class="card" style="width: 18rem;">
+                            <img src="../../media/sala-juegos-infantiles.webp" class="card-img-top" alt="Sala de Juegos Infantiles">
+                            <div class="card-body">
+                              <h5 class="card-title">Sala de Juegos Infantiles</h5>
+                              <p class="card-text">Sala con mesas pequeñas, juegos didácticos y de mesa, juguetes, pizarrón, libros y mucho material para dibujar y pintar.</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="sala-trabajo">
+                        <div class="card" style="width: 18rem;">
+                            <img src="../../media/work-room.webp" class="card-img-top" alt="Sala de Trabajo">
+                            <div class="card-body">
+                              <h5 class="card-title">Sala de Trabajo</h5>
+                              <p class="card-text">Espacio con escritorio, útiles de oficina y ordenador para trabajo en vacaciones.</p>
+                        </div>
+                    </li>
+                    <li class="sala-lectura">
+                        <div class="card" style="width: 18rem;">
+                            <img src="../../media/rincon-lectura.webp" class="card-img-top" alt="Cuarto de Lectura">
+                            <div class="card-body">
+                              <h5 class="card-title">Rincon de Lectura</h5>
+                              <p class="card-text">Tenemos a su disposición una gran cantidad de libros para leer en paz y sumergirse en la literatura.</p>
+                        </div>
+                    </li>
+                    <li class="juegos-exterior">
+                        <div class="card" style="width: 18rem;">
+                            <img src="../../media/juegos-infantiles.webp" class="card-img-top" alt="Juegos Infantiles">
+                            <div class="card-body">
+                              <h5 class="card-title">Juegos Infantiles al Aire Libre</h5>
+                              <p class="card-text">Diseñados para que los niños puedan jugar de forma segura y disfrutar del exterior.</p>
+                        </div>
+                    </li>
+                </ul>
+        </section>
+    </main> -->
 
     <footer class="footer-container"> <!-- Pie de Página -->
         <div class="footer__div--container"> <!-- Contenedor de los bloques internos del pie de página -->
@@ -172,7 +170,7 @@
                 </ul>
             </div>
             <div> <!-- Bloque 2 del pie de página - Logotipo de la empresa -->
-                <img class="footerlogo" src="media/logo.png" alt="Complejo Los Palmares Logo" width="300px" height="120px">
+                <img class="footerlogo" src="../../media/logo.png" alt="Complejo Los Palmares Logo" width="300px" height="120px">
             </div>
             <div> <!-- Bloque 3 del pie de página - Mapa interactivo con la ubicación de la empresa -->
                 <iframe id="maps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3406.905085958769!2d-64.48128692524816!3d-31.361598293603343!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x942d644cca1e58b9%3A0x1d246c6cacf33fa3!2sLos%20Palmares!5e0!3m2!1ses-419!2sar!4v1683259956452!5m2!1ses-419!2sar" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -182,6 +180,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
-    <script src="index.js"></script>
+    <script src="servicios.js"></script>
 </body>
 </html>
