--- a/menu-navegacion/servicios/servicios.html
+++ b/menu-navegacion/servicios/servicios.html
@@ -106,46 +106,6 @@
         </section>
     </main>
 
-    <!-- <main class="serviciosmain">
-        <section>
-                <ul>
-                    <li class="sala-juegos-infantiles">
-                        <div class="card" style="width: 18rem;">
-                            <img src="../../media/sala-juegos-infantiles.webp" class="card-img-top" alt="Sala de Juegos Infantiles">
-                            <div class="card-body">
-                              <h5 class="card-title">Sala de Juegos Infantiles</h5>
-                              <p class="card-text">Sala con mesas pequeñas, juegos didácticos y de mesa, juguetes, pizarrón, libros y mucho material para dibujar y pintar.</p>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="sala-trabajo">
-                        <div class="card" style="width: 18rem;">
-                            <img src="../../media/work-room.webp" class="card-img-top" alt="Sala de Trabajo">
-                            <div class="card-body">
-                              <h5 class="card-title">Sala de Trabajo</h5>
-                              <p class="card-text">Espacio con escritorio, útiles de oficina y ordenador para trabajo en vacaciones.</p>
-                        </div>
-                    </li>
-                    <li class="sala-lectura">
-                        <div class="card" style="width: 18rem;">
-                            <img src="../../media/rincon-lectura.webp" class="card-img-top" alt="Cuarto de Lectura">
-                            <div class="card-body">
-                              <h5 class="card-title">Rincon de Lectura</h5>
-                              <p class="card-text">Tenemos a su disposición una gran cantidad de libros para leer en paz y sumergirse en la literatura.</p>
-                        </div>
-                    </li>
-                    <li class="juegos-exterior">
-                        <div class="card" style="width: 18rem;">
-                            <img src="../../media/juegos-infantiles.webp" class="card-img-top" alt="Juegos Infantiles">
-                            <div class="card-body">
-                              <h5 class="card-title">Juegos Infantiles al Aire Libre</h5>
-                              <p class="card-text">Diseñados para que los niños puedan jugar de forma segura y disfrutar del exterior.</p>
-                        </div>
-                    </li>
-                </ul>
-        </section>
-    </main> -->
-
     <footer class="footer-container"> <!-- Pie de Página -->
         <div class="footer__div--container"> <!-- Contenedor de los bloques internos del pie de página -->
             <div class="footer__div--bloque1"> <!-- Bloque 1 del pie de página - Información de Contacto -->
@@ -180,6 +140,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
-    <script src="servicios.js"></script>
+    <script src="servicios-copy.js"></script>
 </body>
 </html>
